--- a/views/common/part/_timeSelector.ejs
+++ b/views/common/part/_timeSelector.ejs
@@ -1,1 +1,1 @@
-<input name="<%= name %>" type="text" class="form-control timepicker" autocomplete="off">
+<input name="<%= name %>" type="text" class="form-control timepicker" autocomplete="off" placeholder="HH:mm">
