--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -49,54 +49,61 @@ Aa-4
                                 </div>
 
                                 <div class="form-group bmd-form-group col-md-2">
-                                    <label class="bmd-label-static">シアター</label>
+                                    <label class="bmd-label-static">スクリーン</label>
                                     <select class="form-control" name="screen">
                                         <option value="">劇場を選択してください</option>
                                     </select>
                                 </div>
 
-                                <div class="form-group bmd-form-group col-md-4">
+                                <div class="form-group bmd-form-group col-md-3">
                                     <label class="bmd-label-static">上映日 <span class="text-danger">＊</span></label>
 
-                                    <div class="row">
-                                        <div class="col-md-4">
-                                            <input autocomplete="off" class="form-control datepicker" name="date"
-                                                placeholder="選択してください" maxlength="10">
-                                        </div>
-
-                                        <div class="col-md-8">
-                                            <div class="form-check form-check-radio form-check-inline">
-                                                <label class="form-check-label">
-                                                    <input class="form-check-input" type="radio" name="days"
-                                                        id="radio-days-1" value="1" checked> 1日
-                                                    <span class="circle">
-                                                        <span class="check"></span>
-                                                    </span>
-                                                </label>
-                                            </div>
-                                            <div class="form-check form-check-radio form-check-inline">
-                                                <label class="form-check-label">
-                                                    <input class="form-check-input" type="radio" name="days"
-                                                        id="radio-days-3" value="3"> 3日
-                                                    <span class="circle">
-                                                        <span class="check"></span>
-                                                    </span>
-                                                </label>
-                                            </div>
-                                            <div class="form-check form-check-radio form-check-inline disabled">
-                                                <label class="form-check-label">
-                                                    <input class="form-check-input" type="radio" name="days"
-                                                        id="radio-days-7" value="7"> 7日
-                                                    <span class="circle">
-                                                        <span class="check"></span>
-                                                    </span>
-                                                </label>
-                                            </div>
+                                    <div class="input-group">
+                                        <input autocomplete="off" class="form-control datepicker" name="date"
+                                            placeholder="選択してください" maxlength="10">
+                                        <div class="input-group-append">
+                                            <span class="input-group-text">から</span>
                                         </div>
                                     </div>
                                 </div>
 
-                                <div class="form-group bmd-form-group col-md-4">
+                                <div class="form-group bmd-form-group col-md-3">
+                                    <label class="bmd-label-static"></label>
+
+                                    <div class="input-group">
+                                        <div class="form-check form-check-radio form-check-inline">
+                                            <label class="form-check-label">
+                                                <input class="form-check-input" type="radio" name="days"
+                                                    id="radio-days-1" value="1" checked> 1日
+                                                <span class="circle">
+                                                    <span class="check"></span>
+                                                </span>
+                                            </label>
+                                        </div>
+                                        <div class="form-check form-check-radio form-check-inline">
+                                            <label class="form-check-label">
+                                                <input class="form-check-input" type="radio" name="days"
+                                                    id="radio-days-3" value="3"> 3日
+                                                <span class="circle">
+                                                    <span class="check"></span>
+                                                </span>
+                                            </label>
+                                        </div>
+                                        <div class="form-check form-check-radio form-check-inline">
+                                            <label class="form-check-label">
+                                                <input class="form-check-input" type="radio" name="days"
+                                                    id="radio-days-7" value="7"> 7日
+                                                <span class="circle">
+                                                    <span class="check"></span>
+                                                </span>
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="form-group bmd-form-group col-md-2">
+                                    <label class="bmd-label-static">座席指定</label>
+
                                     <div class="form-check">
                                         <label class="form-check-label" for="onlyReservedSeatsAvailable">
                                             <input class="form-check-input" type="checkbox"
