### Changed - レイアウト調整

--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -114,8 +114,8 @@ Aa-10
                                     <td name="name|slice">
                                         $name$
                                     </td>
-                                    <td name="durationAsMinutes" class="text-right">$durationAsMinutes$ min</td>
-                                    <td name="contentRating" class="text-center">$contentRating$</td>
+                                    <td name="durationAsMinutes">$durationAsMinutes$ min</td>
+                                    <td name="contentRating">$contentRating$</td>
                                     <td name="dayPublished">$dayPublished$</td>
                                     <td name="dayAvailabilityEnds">$dayAvailabilityEnds$</td>
                                     <td name="identifier__addtionalProperty">
