--- a/views/ticketTypeGroup/index.ejs
+++ b/views/ticketTypeGroup/index.ejs
@@ -78,7 +78,7 @@ Aa-8
                                         </a>
                                     </td>
                                     <td name="name.ja|slice">$name.ja$</td>
-                                    <td name="offerCount__id" class="text-center">
+                                    <td name="offerCount__id">
                                         <a href="javascript:void(0)" class="popupListTicketType" data-id="$id$">
                                             $offerCount$ 券種
                                         </a>
