### Changed - レイアウト調整

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -207,6 +207,12 @@ body {
 .card .material-datatables {
   margin-top: 1rem; }
 
+.form-control {
+  font-size: inherit; }
+
+.input-group-text {
+  font-size: inherit; }
+
 .scheduler {
   margin: 0 auto;
   overflow: auto;
