--- a/public/scss/_common.scss
+++ b/public/scss/_common.scss
@@ -233,3 +233,9 @@ body {
         margin-top: 1rem;
     }
 }
+.form-control {
+    font-size: inherit;
+}
+.input-group-text {
+    font-size: inherit;
+}
